tests/trybuild/compile_fail/with_settings/bump_scope/borrow/minimum_alignment_increase.stderr
error[E0080]: evaluation panicked: can't change minimum alignment when borrowing with new settings
 --> src/raw_bump.rs
  |
  | /             assert!(
  | |                 NewS::MIN_ALIGN == S::MIN_ALIGN,
  | |                 "can't change minimum alignment when borrowing with new settings"
  | |             );
  | |_____________^ evaluation of `bump_scope::raw_bump::RawBump::<bump_scope::alloc::Global, bump_scope::settings::BumpSettings>::ensure_satisfies_settings_for_borrow::<bump_scope::settings::BumpSettings<2>>::{constant#0}` failed here

note: erroneous constant encountered
 --> src/raw_bump.rs
  |
  | /         const {
  | |             assert!(NewS::UP == S::UP, "can't change `UP` setting");
  | |
  | |             assert!(
... |
  | |             assert!(NewS::CLAIMABLE == S::CLAIMABLE, "can't change claimability");
  | |         }
  | |_________^

note: the above error was encountered while instantiating `fn bump_scope::raw_bump::RawBump::<bump_scope::alloc::Global, BumpSettings>::ensure_satisfies_settings_for_borrow::<BumpSettings<2>>`
 --> src/bump_scope.rs
  |
  |         self.raw.ensure_satisfies_settings_for_borrow::<NewS>();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
